--- a/erpnext/change_log/v9/v9_0_0.md
+++ b/erpnext/change_log/v9/v9_0_0.md
@@ -3,6 +3,6 @@
 - Provision to select the Item's serial number from the dropdown while adding item in the cart
 - Indicator for stock availability in Online POS Mode.
 
-#### Subscription Module
+#### Subscription
 - Setup recurring documents using **Subscription**
 - User can schedule the subscription for doctypes other than Sales Invoice, Purchase Invoice etc.
