--- a/erpnext/change_log/v9/v9_0_0.md
+++ b/erpnext/change_log/v9/v9_0_0.md
@@ -1,4 +1,4 @@
-#### POS
+- POS - Online & Offline
 - Now user has an option to enable or disable Offline POS mode from POS Settings
 - Provision to select the Item's serial number from the dropdown while adding item in the cart
 - Indicator for stock availability in Online POS Mode.
@@ -6,3 +6,25 @@
 #### Subscription
 - Setup recurring documents using **Subscription**
 - User can schedule the subscription for doctypes other than Sales Invoice, Purchase Invoice etc.
+
+#### Healthcare Domain
+- Clinic / Practice Management
+	- Patient
+	- Physician, Physician scheduling
+	- Appointment
+	- Vital Signs
+	- Consultation
+	- Medical Code Standards
+	- Patient Medical Record
+- Laboratory
+	- Sample Collection
+	- Lab Test
+- Patient Portal
+
+#### School Fees Management
+- Fee Structure
+- Fee Schedule
+- Payment against Fees
+
+#### Setup Wizard
+- Broken into 2 parts with a fresh looks
