--- a/erpnext/translations/zh.csv
+++ b/erpnext/translations/zh.csv
@@ -895,7 +895,7 @@ Duration in Days,持续时间天数,
 Duties and Taxes,关税与税项,
 E-Invoicing Information Missing,电子发票信息丢失,
 ERPNext Demo,ERPNext演示,
-ERPNext Settings,下载,
+ERPNext Settings,调参,
 Earliest,最早,
 Earnest Money,保证金,
 Earning,收入,
@@ -2213,7 +2213,7 @@ Project-wise data is not available for Quotation,无工程数据，无法报价,
 Projected,预期可用库存报表,
 Projected Qty,预计数量,
 Projected Quantity Formula,预计数量公式,
-Projects,项目,
+Projects,工程,
 Property,属性,
 Property already added,已添加属性,
 Proposal Writing,提案写作,
@@ -7514,7 +7514,7 @@ Duration (Days),持续时间（天）,
 Project Update,项目更新,
 Project User,项目用户,
 View attachments,查看附件,
-Projects Settings,工程设置,
+Projects Settings,项目设置,
 Ignore Workstation Time Overlap,忽略工作站时间重叠,
 Ignore User Time Overlap,忽略用户时间重叠,
 Ignore Employee Time Overlap,忽略员工时间重叠,
