chore: update fr translation

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -658,7 +658,7 @@ Create Invoice,Créer une facture,
 Create Invoices,Créer des factures,
 Create Job Card,Créer une carte de travail,
 Create Journal Entry,Créer une entrée de journal,
-Create Lead,Créer une piste,
+Create Lead,Créer un Prospect,
 Create Leads,Créer des Prospects,
 Create Maintenance Visit,Créer une visite de maintenance,
 Create Material Request,Créer une demande de matériel,
@@ -3881,7 +3881,7 @@ Only expired allocation can be cancelled,Seule l'allocation expirée peut être 
 Only users with the {0} role can create backdated leave applications,Seuls les utilisateurs avec le rôle {0} peuvent créer des demandes de congé antidatées,
 Open,Ouvert,
 Open Contact,Contact ouvert,
-Open Lead,Ouvrir le fil,
+Open Lead,Ouvrir le Prospect,
 Opening and Closing,Ouverture et fermeture,
 Operating Cost as per Work Order / BOM,Coût d'exploitation selon l'ordre de fabrication / nomenclature,
 Order Amount,Montant de la commande,
